# Edge-AI-Earthquake-Detection-Project

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  Edge_AI_Earthquake_Early_Alerts.docx  LICENSE  Makefile  README.md  STRENGTHENING_SUMMARY.md  docker-compose.yml  pyproject.toml  pyproject_tools.toml  requirements.txt
.github/workflows/: python-ci.yml
app/: __init__.py  alert.py  api.py  config.py  consensus.py  inference.py  main.py  mqtt_client.py  preprocessing.py  sensor.py  storage.py
app/dashboard/: __init__.py  app.py
app/schemas/: __init__.py  alert_schema.py  event_schema.py  sensor_schema.py
app/services/: health_check.py  monitoring_service.py  notification_service.py
app/utils/: experiment_tracking.py  helpers.py  logger.py  validators.py
benchmarks/: accuracy_metrics.csv  latency_results.csv
data/sample_data/: seismic_samples.csv
deployment/: mqtt_broker.conf  nginx.conf
docs/: DATA_MANAGEMENT.md  REPRODUCIBILITY.md  RESEARCH_METHODOLOGY.md  api_documentation.md  architecture.md  deployment.md  research_notes.md  usage.md
models/: labels.txt  model_metadata.json
monitoring/: grafana_dashboard.json  prometheus.yml
scripts/: build_tflite.py  calibrate_sensor.py  run_demo.py  train_model.py
tests/: test_api.py  test_consensus.py  test_inference.py  test_mqtt.py  test_preprocessing.py  test_sensor.py
