[tool.poetry]
name = "edge-ai-earthquake"
version = "0.1.0"
description = "Edge AI network for earthquake early alerts"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
numpy = "^1.27.0"
scipy = "^1.12.3"
paho-mqtt = "^1.7.1"
pydantic = "^2.9.0"
sqlalchemy = "^2.0.48"
alembic = "^1.12.0"
pytest = "^9.1.1"
httpx = "^0.28.1"
scikit-learn = "^1.4.0"
joblib = "^1.4.0"
tensorflow = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
