[tool.poetry]
name = "edge-ai-earthquake"
version = "0.1.0"
description = "Edge AI network for earthquake early alerts"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.116.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }

numpy = "^1.27.0"
scipy = "^1.12.3"

paho-mqtt = "^1.7.1"

pydantic = "^2.9.0"

sqlalchemy = "^2.0.48"
alembic = "^1.12.0"

pytest = "^9.1.1"
pytest-cov = "^6.2.1"

httpx = "^0.28.1"

scikit-learn = "^1.4.0"
joblib = "^1.4.0"

tensorflow = "^2.21.0"

[tool.pytest.ini_options]
minversion = "9.0"
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=app --cov-report=html --cov-report=term-missing -v"

markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0330",
    "C0326",
    "R0913",
]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
